--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       - image: oscarsanabria80/pruebaks8:v1
         name: contenedor-prueba-k8s
         ports:
-        - name: puertok8s
+        - name: puerto-kube
           containerPort: 5002
         env:
           - name: NOMBRE
